# smart-privacy-shield

./: CMakeLists.txt  README.md
application/: CMakeLists.txt
application/cmake/: GlibResources.cmake  Install.cmake
application/data/deploy/mac/: Info.plist.in  app.icns  startup.sh
application/data/gschemas/: de.mauriceackel.sps.application.gschema.xml
application/data/themes/mac/: settings.ini
application/data/themes/win/: settings.ini
application/gui/: dialog-add-source.glade  dialog-edit-source.glade  dialog-preferences.glade  file-processor-window.glade  main-menu.glade  main-window.glade  source-row.glade  sps.gresource.xml.in  video-window.glade
application/src/: application.c  application.h  main.c  pipeline.c  pipeline.h  sourcedata.c  sourcedata.h
application/src/gui/: dialog-add-source.c  dialog-add-source.h  dialog-edit-source.c  dialog-edit-source.h  dialog-preferences.c  dialog-preferences.h  file-processor-window.c  file-processor-window.h  main-window.c  main-window.h  source-row.c  source-row.h  video-window.c  video-window.h
cmake/: FindGLib2.cmake  FindGStreamer.cmake  FindGtk.cmake  FindOpenCV.cmake  Install.cmake  InstallSetup.cmake  LibraryPaths.cmake  Pack.cmake  PluginBundleUtilities.cmake  SpsConfig.cmake
gst-plugins/: CMakeLists.txt
gst-plugins/autocompositor/: CMakeLists.txt  compose.c  compose.h  gstautocompositor.c  gstautocompositor.h
gst-plugins/changedetector/: CMakeLists.txt  changedetection.cpp  changedetection.h  gstchangedetector.c  gstchangedetector.h
gst-plugins/cmake/: Install.cmake
gst-plugins/common/: CMakeLists.txt  changemeta.c  changemeta.h  detectionmeta.c  detectionmeta.h  windowlocationsmeta.c  windowlocationsmeta.h  windowmeta.c  windowmeta.h
gst-plugins/objdetection/: CMakeLists.txt  gstobjdetection.c  gstobjdetection.h  inferencedata.c  inferencedata.h  inferenceutil.c  inferenceutil.h
gst-plugins/objdetection/cmake/: FindONNXRuntime.cmake
gst-plugins/obstruct/: CMakeLists.txt  gstobstruct.c  gstobstruct.h  obstruct.cpp  obstruct.h
gst-plugins/regions/: CMakeLists.txt  gstregions.c  gstregions.h
gst-plugins/screencapsrc/: CMakeLists.txt  gstscreencapsrc.c  gstscreencapsrc.h  screencaputil.h  winanalyzerutils.h
gst-plugins/screencapsrc/cmake/: FindCppWinRT.cmake
gst-plugins/screencapsrc/platform/lin/: screencaputil.c  winanalyzerutils.c
gst-plugins/screencapsrc/platform/mac/: screencaputil.m  winanalyzerutils.m
gst-plugins/screencapsrc/platform/win/: screencaputil.cpp  winanalyzerutils.cpp
gst-plugins/winanalyzer/: CMakeLists.txt  gstwinanalyzer.c  gstwinanalyzer.h  winanalyzerutils.c  winanalyzerutils.h
gst-plugins/winanalyzer/platform/lin/: winanalyzerutils.c
gst-plugins/winanalyzer/platform/mac/: winanalyzerutils.m
gst-plugins/winanalyzer/platform/win/: winanalyzerutils.cpp
sps-library/: CMakeLists.txt
sps-library/cmake/: Install.cmake
sps-library/platform/lin/utils/: spssources.c
sps-library/platform/mac/utils/: spssources.m
sps-library/platform/win/utils/: spssources.cpp
sps-library/sps/: sps.h  spsversion.h.in
sps-library/sps/plugins/: spsplugin.c  spsplugin.h  spsregistry.c  spsregistry.h
sps-library/sps/utils/: spssources.c  spssources.h
sps-plugins/: CMakeLists.txt
sps-plugins/base/: CMakeLists.txt
sps-plugins/base/cmake/: GlibResources.cmake  GlibSettings.cmake  Install.cmake
sps-plugins/base/data/: plugin.gschema.in
sps-plugins/base/gui/: changedetector.glade  gresource.xml.in  objdetection.glade  obstruct.glade  region-dialog.glade  regions.glade  winanalyzer.glade
sps-plugins/base/src/: spspluginbase.c  spspluginbase.h
sps-plugins/base/src/changedetector/: changedetector.c  changedetector.h  gui-changedetector.c  gui-changedetector.h
sps-plugins/base/src/objdetection/: gui-objdetection.c  gui-objdetection.h  objdetection.c  objdetection.h
sps-plugins/base/src/obstruct/: gui-obstruct.c  gui-obstruct.h  obstruct.c  obstruct.h
sps-plugins/base/src/regions/: gui-regions.c  gui-regions.h  regiondialog.c  regiondialog.h  regions.c  regions.h  utils.c  utils.h
sps-plugins/base/src/winanalyzer/: gui-winanalyzer.c  gui-winanalyzer.h  winanalyzer.c  winanalyzer.h
